--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<div class="container">
 		<div class="intro">
 			<img src="images/logo.png"/>
-			<h1>Here's your bastard wheel</h1>
-			<h3>Had a quick look, here's what I got</h3>
+			<h1>Here's an example page</h1>
+			<h3>Feel free to put text/images here</h3>
 		</div>
 
 		<hr/>
